src/components/section/Section.css
.section-wrap {
  padding-top: 6em;
  display: flex;
  flex-direction: column;
  border-top: 1px solid var(--line);

}
.section-content-wrap {
  height: auto;
  width: 100%;
  overflow: hidden;
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
  box-sizing: border-box;
}
.header-wrap {
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
}
.header-line {
  margin-top: 0;
  margin-bottom: 0.1em;
}
.header-line:last-child {
  margin-bottom: 0.4em;
}

/* Common viz styles */
.viz-wrap {
  height: 100vh;
  display: flex;
  align-items: center;
  position: sticky;
  top: -1px;
  border-top: solid 1px var(--line);
  margin-top: 6em;
  padding-left: env(safe-area-inset-left);
  padding-right: env(safe-area-inset-right);
}
.viz-svg-outer-wrap {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
}
.viz-des-wrap {
  padding: 0 5vw;
  height: 100vh;
  width: calc(300px + 10vw);
  flex-shrink: 0;
  position: relative;
  border-left: solid 1px var(--line);
  box-sizing: border-box;
}
#polar-plot .viz-des-wrap {
  border-left: none;
  border-right: solid 1px var(--line);
}
.viz-des-text {
  width: 100%;
  width: 300px;
  position: absolute;
  top: 50%;
  left: 50%;
  margin: 0;
  --animation-speed: 800ms;
  --animation-delay: 0ms;
  transform: translate3d(-50%, calc(-50% + 3.2em), 0);
  opacity: 0;
}
.viz-des-text.on {
  animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards,
    blur-light calc(var(--animation-speed)/2) var(--animation-delay) var(--ease-out-quart) forwards,
    up-center var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards;
}
.viz-des-text.on-reverse {
  animation: opacity var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards,
    blur-light calc(var(--animation-speed)/2) var(--animation-delay) var(--ease-out-quart) forwards,
    down-center var(--animation-speed) var(--animation-delay) var(--ease-out-quart) forwards;
}
.viz-scroll-box {
  position: absolute;
  top: 0;
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  height: 100%;
  width: 100%;
}
.viz-scroll-anchor, .viz-scroll-dummy-anchor {
  width: 0px;
  height: 0px;
}

@media only screen and (max-aspect-ratio: 12/10) {
  .viz-wrap {
    flex-direction: column;
    justify-content: center;
  }
  #polar-plot .viz-wrap {
    flex-direction: column-reverse;
    justify-content: center;
  }
  .viz-svg-outer-wrap {
    height: auto;
  }
  .viz-des-wrap {
    height: calc(6.4em + 10vh);
    width: 100%;
    padding: 0;
    border-left: none;
    border-right: none;
  }
  .viz-des-text {
    width: 85%;
    max-width: 300px;
  }
}
@media only screen and (max-width: 768px) {
  .section-wrap {
    padding-top: 4em;
  }
  .viz-wrap {
    margin-top: 4em;
  }
}
@media only screen and (max-width: 900px) and (min-aspect-ratio: 12/10) {
  .viz-des-wrap {
    width: calc(180px + 10vw);
  }
  .viz-des-text {
    width: 180px;
  }
}

